--- a/OnionConsumeWebAPI/Views/AKTripsell/_AKContactDetailsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AKTripsell/_AKContactDetailsPartialView.cshtml
@@ -280,6 +280,16 @@
                 alert("Please enter a valid 10-digit mobile number.");
                 return false;
             }
+            const regexAK = /^[1-9][0-9]{9}$/;
+            if (!regexAK.test(phonefocus)) {
+                document.getElementById('phoneNumberErrorMessage').innerText = "Invalid Phone Number";
+                let phoneToDisplay = document.getElementById("error-message8");
+                phoneToDisplay.style.display = "none";
+                return false;
+
+            } else {
+                document.getElementById('phoneNumberErrorMessage').innerText = "";
+            }
 
             //Gst
             var buttongst = document.getElementById('GSTButton2');
