--- a/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoContactDetailsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoContactDetailsPartialView.cshtml
@@ -326,6 +326,17 @@
                 alert("Please enter a valid 10-digit mobile number.");
                 return false;
             }
+            const regexIndigo = /^[1-9][0-9]{9}$/;
+            if (!regexIndigo.test(phonefocus)) {
+                document.getElementById('phoneNumberErrorMessage').innerText = "Invalid Phone Number";
+                let phoneToDisplay = document.getElementById("error-message8");
+                phoneToDisplay.style.display = "none";
+                return false;
+
+            } else {
+                document.getElementById('phoneNumberErrorMessage').innerText = "";
+            }
+
 
             //Gst
             var buttongst = document.getElementById('GSTButton2');
