--- a/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
@@ -586,8 +586,10 @@
         left: 0;
         background-color: white;
         border: 1px solid #ccc;
-        width: 300px;
-        z-index: 999;
+        width: 328px;
+        z-index: 10;
+        height: 240px;
+        overflow: auto;
     }
 
     
